# internal/model/cart_item_model.go
@@ -8,7 +8,14 @@ type CartItem struct {
 }
 
 type CartItemRequest struct {
-    UserID     string `json:"user_id" validate:"required" `
     ProductID  string `json:"product_id" validate:"required" `
     Quantity   uint64  `json:"quantity" validate:"required" `
+}
+
+type CartItemResponse struct {
+    Kind       string `json:"kind"`
+    ID         string `json:"id"`
+    UserID     string `json:"user_id"`
+    ProductID  string `json:"product_id"`
+    Quantity   uint64  `json:"quantity"`
 }
